src/test/ui/derives/deriving-with-repr-packed.stderr
error[E0791]: `Clone` can't be derived on this `#[repr(packed)]` struct with type or const parameters
  --> $DIR/deriving-with-repr-packed.rs:9:16
   |
LL | #[derive(Copy, Clone, Default, PartialEq, Eq)]
   |                ^^^^^
   |
   = note: this error originates in the derive macro `Clone` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0791]: `PartialEq` can't be derived on this `#[repr(packed)]` struct with type or const parameters
  --> $DIR/deriving-with-repr-packed.rs:9:32
   |
LL | #[derive(Copy, Clone, Default, PartialEq, Eq)]
   |                                ^^^^^^^^^
   |
   = note: this error originates in the derive macro `PartialEq` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0791]: `Hash` can't be derived on this `#[repr(packed)]` struct that does not derive `Copy`
  --> $DIR/deriving-with-repr-packed.rs:15:19
   |
LL | #[derive(Default, Hash)]
   |                   ^^^^
   |
   = note: this error originates in the derive macro `Hash` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0791]: `Debug` can't be derived on this `#[repr(packed)]` struct that does not derive `Copy`
  --> $DIR/deriving-with-repr-packed.rs:34:10
   |
LL | #[derive(Debug, Default)]
   |          ^^^^^
   |
   = note: this error originates in the derive macro `Debug` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0791`.
